feat: initial release
This commit includes basic Hacker News views:

- Category lists, e.g. /top/1
- Post with comments
- Single thread view
- User page

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+	color-scheme: light dark;
+
+	--color-base: 32deg 57% 95%;
+	--color-surface: 32deg 57% 92%;
+	--color-subtle: 206deg 23% 31%;
+	--color-text: 206deg 23% 3%;
+	--color-primary: 347deg 29% 59%;
+
+	@media (prefers-color-scheme: dark) {
+		--color-base: 333deg 5% 9%;
+		--color-surface: 333deg 5% 14%;
+		--color-subtle: 60deg 5% 62%;
+		--color-text: 60deg 5% 94%;
+		--color-primary: 347deg 50% 71%;
+	}
+}
+
+html {
+	@apply bg-base text-text antialiased;
+}
