fix: words of any length break
This commit causes only long words to break when necessary. Words that
do not overflow the page should no longer break.

--- a/src/app.css
+++ b/src/app.css
@@ -40,3 +40,10 @@ html {
 [id] {
 	@apply scroll-mt-3;
 }
+
+@layer utilities {
+	.break-long-words {
+		overflow-wrap: break-word;
+		word-break: break-word;
+	}
+}
